Aula 011/6325149/images/print08-security-group.txt
{
    "SecurityGroups": [
        {
            "GroupId": "sg-015bdc1d4a553006a",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-04d653639c7a1fc45",
            "SecurityGroupArn": "arn:aws:ec2:sa-east-1:577638395851:security-group/sg-015bdc1d4a553006a",
            "OwnerId": "577638395851",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "577638395851",
                            "GroupId": "sg-015bdc1d4a553006a"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
